--- a/notebooks/ai_demo.ipynb
+++ b/notebooks/ai_demo.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "0fd36997",
    "metadata": {},
    "outputs": [
@@ -31,8 +31,6 @@
     }
    ],
    "source": [
-    "# Add this cell at the top or after your setup cells\n",
-    "\n",
     "import requests\n",
     "\n",
     "API_URL = \"http://localhost:8000/query\"\n",
@@ -45,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6601ef38",
    "metadata": {},
    "outputs": [
@@ -72,29 +70,23 @@
     "if IS_CI:\n",
     "    print(\"Running in CI mode: notebook will be executed and validated automatically.\")\n",
     "else:\n",
-    "    print(\"Running in interactive mode: use the notebook UI for exploration and demos.\")\n",
-    "\n",
-    "# To skip cells in CI, use the following pattern at the top of any cell:\n",
-    "# if IS_CI:\n",
-    "#     return\n",
-    "\n",
-    "# For more info, see: https://nbval.readthedocs.io/ and https://papermill.readthedocs.io/"
+    "    print(\"Running in interactive mode: use the notebook UI for exploration and demos.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "d568f348",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configuration: API endpoint URL\n",
-    "API_URL = \"http://localhost:8000/api/ask\""
+    "API_URL = \"http://localhost:8000/query\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "35db1e60",
    "metadata": {},
    "outputs": [],
@@ -103,7 +95,7 @@
     "from getpass import getpass\n",
     "\n",
     "# Authentication: API Key or JWT\n",
-    "API_AUTH_TOKEN = os.getenv(\"CODECRAFT_API_TOKEN\")\n",
+    "API_AUTH_TOKEN = \"034a260ebac238abc801bbc4186c277f2b9ef6b5945115a7\"\n",
     "if not API_AUTH_TOKEN:\n",
     "    print(\"No API token found in environment variable CODECRAFT_API_TOKEN.\")\n",
     "    API_AUTH_TOKEN = getpass(\"Enter your API key or JWT (input hidden): \")\n",
@@ -116,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "5eae303f",
    "metadata": {},
    "outputs": [],
@@ -124,9 +116,10 @@
     "import requests\n",
     "from pprint import pprint\n",
     "\n",
+    "# 🟦 NOTE:\n",
     "\n",
-    "def ask_ai(question: str, api_url: str = API_URL, extra_payload: dict = None):\n",
-    "    payload = {\"question\": question}\n",
+    "def ask_ai(query: str, api_url: str = API_URL, top_k: int = 3, extra_payload: dict = None):\n",
+    "    payload = {\"query\": query, \"top_k\": top_k}\n",
     "    if extra_payload:\n",
     "        payload.update(extra_payload)\n",
     "    headers = {}\n",
@@ -154,10 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "871a42b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'results': []}\n"
+     ]
+    }
+   ],
    "source": [
     "question = \"What is the business value of CodeCraft AI?\"\n",
     "result = ask_ai(question)\n",
@@ -174,12 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "f3cc51e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'results': []}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Replace with your own question\n",
     "my_question = \"How does the vector store work?\"\n",
     "my_result = ask_ai(my_question)\n",
     "pprint(my_result)"
@@ -196,34 +204,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a690146",
+   "metadata": {},
+   "source": [
+    "# 🟦 Interactive Widgets in Jupyter Notebooks\n",
+    "\n",
+    "Jupyter notebooks support interactive widgets (like buttons and text boxes) using the `ipywidgets` library.  \n",
+    "These widgets let you interact with your code and backend in real time—no need to edit code or rerun cells for each new question.\n",
+    "\n",
+    "- **How it works:**  \n",
+    "  - Type your question in the input box.\n",
+    "  - Click the **Ask AI** button.\n",
+    "  - The notebook sends your question to the backend API and displays the response below.\n",
+    "\n",
+    "> 🟩 **GOOD:** This is ideal for demos, rapid prototyping, and stakeholder engagement.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d1e28f12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e3411390471452a9ae0ba5cc6b37927",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Text(value='', description='Question:', layout=Layout(width='80%'), placeholder='Type your ques…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "# 🟦 How to Use This Notebook\n",
+    "\n",
+    "import sys\n",
+    "\n",
     "try:\n",
     "    import ipywidgets as widgets\n",
-    "    from IPython.display import display, Markdown\n",
+    "    from IPython.display import display, Markdown, clear_output\n",
     "\n",
     "    def on_ask_clicked(_):\n",
     "        user_q = question_box.value.strip()\n",
+    "        output_box.clear_output()\n",
     "        if not user_q:\n",
-    "            output_box.clear_output()\n",
     "            with output_box:\n",
     "                display(Markdown(\"**Please enter a question.**\"))\n",
     "            return\n",
-    "        output_box.clear_output()\n",
     "        with output_box:\n",
     "            display(Markdown(f\"**Question:** {user_q}\"))\n",
     "            response = ask_ai(user_q)\n",
-    "            display(Markdown(f\"**Response:** {response}\"))\n",
+    "            if response:\n",
+    "                display(Markdown(f\"**Response:** {response}\"))\n",
+    "            else:\n",
+    "                display(Markdown(\"**No response or error from backend.**\"))\n",
     "\n",
     "    question_box = widgets.Text(\n",
     "        value=\"\",\n",
     "        placeholder=\"Type your question here\",\n",
     "        description=\"Question:\",\n",
     "        layout=widgets.Layout(width=\"80%\"),\n",
+    "        style={\"description_width\": \"initial\"},\n",
     "    )\n",
     "    ask_button = widgets.Button(description=\"Ask AI\", button_style=\"primary\")\n",
     "    output_box = widgets.Output()\n",
@@ -231,14 +281,16 @@
     "    display(widgets.VBox([question_box, ask_button, output_box]))\n",
     "except ImportError:\n",
     "    print(\n",
-    "        \"ipywidgets not installed. Run 'pip install ipywidgets' for interactive demo.\"\n",
-    "    )"
+    "        \"🟥 CRITICAL: ipywidgets not installed. Run 'poetry add ipywidgets' or 'pip install ipywidgets' in your environment.\"\n",
+    "    )\n",
+    "except Exception as e:\n",
+    "    print(f\"🟥 CRITICAL: Error initializing widget: {e}\", file=sys.stderr)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "codecraft-ai-qerOw_l4-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
