--- a/notebooks/00_core_api_demo.ipynb
+++ b/notebooks/00_core_api_demo.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ad51c966",
    "metadata": {},
    "outputs": [],
@@ -96,18 +96,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4fe95d82",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "my_question = \"How does the vector store work?\"\n",
     "my_result = ask_ai(my_question)\n",
     "pprint(my_result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d20a3a26-d5a2-431f-813e-d1922703d7b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "codecraft-ai-qerOw_l4-py3.11",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
