Resovling Trivy build error

--- a/notebooks/01_prompt_engineering.ipynb
+++ b/notebooks/01_prompt_engineering.ipynb
@@ -104,7 +104,7 @@
     "print(\"Prompt v1:\")\n",
     "pprint(result_v1)\n",
     "\n",
-    "# 🟩 GOOD: Improved prompt with explicit context\n",
+    "# Improved prompt with explicit context\n",
     "prompt_v2 = (\n",
     "    \"You are an AWS-native AI assistant. Summarize the main features of CodeCraft AI for a CTO evaluating enterprise AI platforms.\"\n",
     ")\n",
