--- a/notebooks/02_evaluation_testing.ipynb
+++ b/notebooks/02_evaluation_testing.ipynb
@@ -118,7 +118,7 @@
     "\n",
     "def extract_text_from_response(response):\n",
     "    \"\"\"\n",
-    "    🟩 GOOD: Extracts concatenated text from all results for robust keyword evaluation.\n",
+    "    Extracts concatenated text from all results for robust keyword evaluation.\n",
     "    \"\"\"\n",
     "    if not response or \"results\" not in response or not response[\"results\"]:\n",
     "        return \"\"\n",
@@ -127,7 +127,7 @@
     "\n",
     "def evaluate_response(response, expected_keywords):\n",
     "    \"\"\"\n",
-    "    🟩 GOOD: Evaluates if all expected keywords are present in the concatenated response text.\n",
+    "    Evaluates if all expected keywords are present in the concatenated response text.\n",
     "    \"\"\"\n",
     "    text = extract_text_from_response(response)\n",
     "    if not text:\n",
