--- a/notebooks/03_integration_automation.ipynb
+++ b/notebooks/03_integration_automation.ipynb
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🟩 GOOD: Batch inference results saved to batch_inference_20250625_172953.json\n"
+      "Batch inference results saved to batch_inference_20250625_172953.json\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
     "output_path = f\"batch_inference_{datetime.now().strftime('%Y%m%d_%H%M%S')}.json\"\n",
     "with open(output_path, \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(batch_results, f, ensure_ascii=False, indent=2)\n",
-    "print(f\"🟩 GOOD: Batch inference results saved to {output_path}\")"
+    "print(f\"Batch inference results saved to {output_path}\")"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "source": [
     "def lambda_handler(event, context=None):\n",
     "    \"\"\"\n",
-    "    🟩 GOOD: Example Lambda handler for AI inference automation.\n",
+    "    Example Lambda handler for AI inference automation.\n",
     "    Expects event['prompt'] and optional event['top_k'].\n",
     "    \"\"\"\n",
     "    prompt = event.get(\"prompt\")\n",
