--- a/notebooks/04_deployment_monitoring.ipynb
+++ b/notebooks/04_deployment_monitoring.ipynb
@@ -109,13 +109,13 @@
    "source": [
     "def check_sagemaker_endpoint_status(endpoint_name):\n",
     "    \"\"\"\n",
-    "    🟩 GOOD: Checks the status of a SageMaker endpoint and provides actionable diagnostics.\n",
+    "    Checks the status of a SageMaker endpoint and provides actionable diagnostics.\n",
     "    🟨 CAUTION: Handles missing or misnamed endpoints gracefully for all environments.\n",
     "    \"\"\"\n",
     "    try:\n",
     "        response = sagemaker.describe_endpoint(EndpointName=endpoint_name)\n",
     "        status = response[\"EndpointStatus\"]\n",
-    "        print(f\"🟩 GOOD: SageMaker endpoint '{endpoint_name}' status: {status}\")\n",
+    "        print(f\"SageMaker endpoint '{endpoint_name}' status: {status}\")\n",
     "        return status\n",
     "    except Exception as e:\n",
     "        error_message = str(e)\n",
@@ -181,7 +181,7 @@
     "\n",
     "def deploy_sagemaker_endpoint(model_name, endpoint_name, instance_type=\"ml.m5.large\"):\n",
     "    \"\"\"\n",
-    "    🟩 GOOD: Deploys a SageMaker endpoint for dev/test.\n",
+    "    Deploys a SageMaker endpoint for dev/test.\n",
     "    🟨 CAUTION: For production, use CI/CD and IaC (CloudFormation, CDK, Terraform).\n",
     "    \"\"\"\n",
     "    sm = boto3.client(\"sagemaker\", region_name=os.getenv(\"AWS_REGION\"))\n",
@@ -202,7 +202,7 @@
     "            EndpointName=endpoint_name,\n",
     "            EndpointConfigName=f\"{endpoint_name}-config\"\n",
     "        )\n",
-    "        print(f\"🟩 GOOD: SageMaker endpoint '{endpoint_name}' deployment initiated.\")\n",
+    "        print(f\"SageMaker endpoint '{endpoint_name}' deployment initiated.\")\n",
     "    except sm.exceptions.ClientError as e:\n",
     "        print(f\"🟥 CRITICAL: Failed to deploy endpoint: {e}\")\n",
     "    except Exception as e:\n",
@@ -232,7 +232,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🟩 GOOD: Found 0 invocation datapoints for endpoint 'codecraft-ai-model' in the last 60 minutes.\n"
+      "Found 0 invocation datapoints for endpoint 'codecraft-ai-model' in the last 60 minutes.\n"
      ]
     }
    ],
@@ -252,7 +252,7 @@
     "            Statistics=[\"Sum\"]\n",
     "        )\n",
     "        datapoints = response.get(\"Datapoints\", [])\n",
-    "        print(f\"🟩 GOOD: Found {len(datapoints)} invocation datapoints for endpoint '{endpoint_name}' in the last {minutes} minutes.\")\n",
+    "        print(f\"Found {len(datapoints)} invocation datapoints for endpoint '{endpoint_name}' in the last {minutes} minutes.\")\n",
     "        return datapoints\n",
     "    except Exception as e:\n",
     "        print(f\"🟥 CRITICAL: Failed to get CloudWatch metrics: {e}\")\n",
@@ -290,7 +290,7 @@
     "            Message=message,\n",
     "            Subject=subject\n",
     "        )\n",
-    "        print(f\"🟩 GOOD: Monitoring alert sent to {MONITORING_TOPIC_ARN}\")\n",
+    "        print(f\"Monitoring alert sent to {MONITORING_TOPIC_ARN}\")\n",
     "    except Exception as e:\n",
     "        print(f\"🟥 CRITICAL: Failed to send SNS alert: {e}\")\n",
     "\n",
