--- a/notebooks/ai_demo.ipynb
+++ b/notebooks/ai_demo.ipynb
@@ -211,7 +211,7 @@
     "# 🟦 Interactive Widgets in Jupyter Notebooks\n",
     "\n",
     "Jupyter notebooks support interactive widgets (like buttons and text boxes) using the `ipywidgets` library.  \n",
-    "These widgets let you interact with your code and backend in real time—no need to edit code or rerun cells for each new question.\n",
+    "These widgets let you interact with your code and backend in real time no need to edit code or rerun cells for each new question.\n",
     "\n",
     "- **How it works:**  \n",
     "  - Type your question in the input box.\n",
